chore: Misc cleanup